# TSP-Sim-trico-SA

./: .gitignore  Cargo.toml  best_solution_dist.txt  output.txt
app/: Cargo.toml
app/src/: main.rs
data_plots/: pyproject.toml
data_plots/data_plots/: conv_plot.py  data_plot.py  load_data.py
data_plots/tests/: test_data_plots.py  test_load_data.py
data_retrieve/src/: lib.rs
graphics_engine/src/: lib.rs
params_tests/: Cargo.toml
params_tests/src/: main.rs
tsa_sim/: Cargo.toml
tsa_sim/src/: cooling_methods.rs  lib.rs
