[tool.poetry]
name = "data_plots"
version = "0.1.0"
description = ""
authors = ["FQA <otavioalmeida650@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
